# AndyJuan_Newsletter

./: .coverage  .env.example  .gitignore  AGENTS.md  README.md  andyjuan-portfolio-radar.md  pyproject.toml
code-feedback/: phase-0-review.md  phase-1-review.md  phase-2-a-b-c-review.md  phase-3-review.md  phase-4-review.md  phase-5-review.md  phase6_review.md
config/: etf_holdings.yaml  macro_feeds.yaml  portfolio.yaml  recipients.yaml  settings.yaml  themes.yaml
docs/: plan.md  spec.md  styling-refresh-plan.md  tasks.md
prompts/: ai_synthesis.md  ai_synthesis_deep.md  fact_checker.md  news_ranker.md  theme_flash.md
scripts/: capture_llm_fixtures.py  debug_exposure.py  import_snowball.py  refresh_etf_holdings.py  run_manual.py  test_email.py
src/: __init__.py  config.py  main.py
templates/: daily_email.html.j2  saturday_deep.html.j2
tests/: _pipeline_helpers.py  conftest.py  test_config.py  test_db.py  test_entity_match.py  test_exposure.py  test_fact_checker.py  test_fetcher_macro_rss.py  test_fetcher_models.py  test_fetcher_newsdata.py  test_http.py  test_import_snowball.py  test_llm.py  test_log.py  test_lookthrough_base.py  test_lookthrough_globalx.py  test_lookthrough_ishares.py  test_lookthrough_lyxor.py  test_lookthrough_resolver.py  test_lookthrough_ssga.py  test_lookthrough_vaneck.py  test_main.py  test_phase6_ops.py  test_pipeline_daily.py  test_pipeline_deep.py  test_pnl.py  test_portfolio.py  test_pricing.py  test_ranker.py  test_refresh_etf_holdings.py  test_renderer.py  test_run_manual.py  test_sender.py  test_synthesis.py  test_theme_flash.py  (+1 more)
(+113 files in other folders)
